# dslabs-log-viz

./: Cargo.toml  README.md
log-viz/: Cargo.toml
log-viz/src/: app.rs  handler.rs  main.rs  ui.rs
log-viz/src/ui/: event_item.rs  event_list.rs
src/: abstract_object.rs  app.rs  ds_events.rs  dsl.rs  err.rs  event.rs  handler.rs  lib.rs  main.rs  ui.rs
src/abstract_object/: parser.rs
src/app/: filter_state.rs  messages_state.rs  navigation_state.rs
src/ds_events/: abstract_object.rs  event.rs
src/ds_events/abstract_object/: parser.rs  pretty_print.rs
src/ds_events/event/: node_ev.rs  parser.rs
src/dsl/: filters.rs  parser.rs  query_ast.rs
src/event/: node_ev.rs  parser.rs
src/ui/: event_details.rs  event_list.rs  query_window.rs
