[package]
name = "dslabs-log-viz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.3"
ratatui = { version = "0.26.0", features = ["crossterm"] }
crossterm = "0.27.0"
clap = "4.4.18"
log = "0.4.20"
env_logger = "0.11.3"
nom = "7.1.3"
time = { version = "0.3.34", features = ["parsing", "formatting", "macros"] }
dot = "0.1.4"
